--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@ body{
     margin : 0;
     padding : 0;
     box-sizing: border-box;
+    font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-div{
+div, p, img{
     margin : 0;
     padding : 0;
+}
+
+input{
+    margin : 0;
 }
 
 #container{
@@ -18,13 +23,13 @@ div{
 }
 
 #sidebar{
-    background-color: rgb(122, 153, 239);
+    background-color: rgb(91, 129, 232);
     grid-row: 1 / -1;
     grid-column: 1/ 2;
 
     display : grid;
-    padding : 15px;
     gap : 10px;
+    grid-template-rows: 1fr 3fr 2fr 7fr;
 }
 
 #header{
@@ -32,6 +37,10 @@ div{
     box-shadow : 10px 10px rgb(0 0 0 /40%);
     grid-column: 2/-1;
     grid-row: 1/2;
+    font-size: 18px;
+
+    display: grid;
+    grid-template-rows: 1fr 1fr;
 }
 
 #main{
@@ -47,15 +56,54 @@ div{
 
 .links{
     color : white;
-    font-size: 20px;
+    font-size: 18px;
     display: flex;
     align-items: center;
+    gap : 20px;
+    margin : 15px;
+    font-weight: 500;
+}
+
+#nav-1 .links, #nav-2 .links{
+    margin-left : 20px;
+}
+.links>img, #header img{
+    margin : 0;
+    padding : 0;
+    height : 1.2em;
+    width : 1.2em;
+    cursor: pointer;
 }
 
 .links>img{
-    margin : 0;
-    padding : 0;
-    height : 1.3em;
-    width : 1.3em;
     filter: invert(100%) sepia(1%) saturate(7496%) hue-rotate(107deg) brightness(106%) contrast(101%);
 }
+
+
+#top{
+    display: grid;
+    padding : 20px 10px 0 15px;
+    grid-template-columns: 1fr 6fr 1fr 1fr 1fr 3fr;
+    text-align: center;
+}
+
+#top input[type="search"]{
+    width : 100%;
+    height : 50%;
+    border-radius: 15px;
+    background-color: rgb(203, 226, 233);
+    border-style : none;
+}
+
+#top input[type="search"]:focus{
+    background-color: rgba(203, 226, 233, 50%);
+}
+
+#top #notif-icon{
+    grid-column: 4;
+}
+
+/* #top #proid{
+    border-radius: 100%;
+    background-color: yellow;
+} */
