--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@ input{
 
     display: grid;
     grid-template-rows: 1fr 1fr;
+    box-shadow: 0px 4px 2px -2px rgba(0, 0, 0, 0.2); 
 }
 
 #main{
-    background-color: lightgray;
+    background-color: rgb(230, 226, 226);
     grid-row : 2/-1;
     grid-column: 2/-1;
 }
@@ -114,7 +115,7 @@ input{
 #bot{
     display: grid;
     grid-template-columns: 1.5fr 4fr 3fr 2fr 2fr 2fr;
-    padding : 20px 10px 0 15px;
+    padding : 20px 10px 10px 15px;
 }
 
 #bot .new{
@@ -126,7 +127,7 @@ input{
     color : white;
     width : 70%;
     border-radius: 20px;
-    height : 60%;
+    height : 70%;
     text-align: center;
     font-size: 90%;
     display: flex;
@@ -144,4 +145,44 @@ input{
 #details > p + p{
     font-size: 130%;   
     font-weight: bold;
+}
+
+
+#main{
+    display: grid;
+    grid-template-columns: 3.5fr 1.5fr;
+    padding : 30px 15px 15px 40px;
+}
+
+#main #other{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+
+#main #proj-tab{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap : 20px;
+    margin-top: 10px;
+}
+
+.proj{
+    width : 90%;
+    height : 10rem;
+    background-color: white;
+    box-shadow: 4px 4px 2px -2px rgba(0, 0, 0, 0.2);
+    border-radius: 8px; 
+}
+
+#announcements #an-tab,
+#trending #td-tab{
+    margin-top: 10px;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    background-color: white;
+    height : 14.5rem;
+    width : 80%;
+    box-shadow: 4px 4px 2px -2px rgba(0, 0, 0, 0.2);
+    border-radius: 8px; 
 }
