--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body{
     box-sizing: border-box;
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
-
+div{
+    box-sizing: border-box;
+}
 div, p, img{
     margin : 0;
     padding : 0;
@@ -172,17 +174,73 @@ input{
     height : 10rem;
     background-color: white;
     box-shadow: 4px 4px 2px -2px rgba(0, 0, 0, 0.2);
-    border-radius: 8px; 
+    border-radius: 8px;
+    display: grid;
+    grid-template-columns: 1fr 39fr;
+}
+
+.proj div:nth-child(1){
+    border-top-left-radius: 8px;
+    border-bottom-left-radius : 8px;
+}
+
+.proj>div:nth-child(2) {
+    padding : 16px;
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    gap : 10px;
+}
+
+.proj>div:nth-child(2)>div:nth-child(2){
+    display: flex;
+    justify-content: flex-end;
+    gap : 20px;
+}
+
+.proj>div:nth-child(2)>div:nth-child(2) img{
+    width: 20px;
 }
 
 #announcements #an-tab,
 #trending #td-tab{
+    box-sizing: border-box;
     margin-top: 10px;
+    padding : 25px 20px;
     display: grid;
     grid-template-rows: 1fr 1fr 1fr;
     background-color: white;
-    height : 14.5rem;
+    height : 80%;
     width : 80%;
     box-shadow: 4px 4px 2px -2px rgba(0, 0, 0, 0.2);
     border-radius: 8px; 
+    font-size: 10px;
+}
+#trending #td-tab{
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    gap : 5px;
+    padding : 15px 20px;
+}
+
+#an-tab div p:nth-child(1){
+    font-weight: bold;
+    font-size: 13px;
+}
+
+#td-tab img{
+    width : 30px;
+}
+
+#td-tab>div{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+}
+
+#td-tab>div> div:nth-child(1){
+    justify-self: center;
+}
+
+#td-tab > div > div:nth-child(2) > p:nth-child(1){
+    font-size: 12px;
+    font-weight: 700;
 }
